@@ -1,6 +1,13 @@
 2010-07-19  d+w3m@vdr.jp
 
 	* [w3m-dev 04321] Re: w3m's bugs from bugs.debian.org
+	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=366284#5
+	* rc.c (init_rc): check config_file is NULL or not.
+	(panel_set_option): check config_file instead of no_rc_dir.
+
+2010-07-19  d+w3m@vdr.jp
+
+	* [w3m-dev 04321] Re: w3m's bugs from bugs.debian.org
 	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=261174#10
 	* terms.c (graph_ok): check UseGraphicChar is GRAPHIC_CHAR_ALL or not.
 	* symbol.c (get_symbol): check UseGraphicChar.
